<resources>
    <string name="app_name">Pool Paddle Club</string>
    <string name="app_url" translatable="false">https://poolpadel.club</string>
    <string name="firebase_url" translatable="false">https://poolpadel.firebaseio.com</string>

    <!-- Not used yet -->
    <string name="facebook_app_id" translatable="false"/>
    <string name="twitter_app_key" translatable="false"/>
    <string name="twitter_app_secret" translatable="false"/>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>

    <string name="menu_games">Games</string>
    <string name="menu_history">History</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_tournament">Tournament</string>
    <string name="menu_algorithm">Algorithms</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>

    <string name="title_activity_game_list">Games</string>
    <string name="title_activity_game_detail">Game</string>
    <string name="title_activity_game_create">New game</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
